--- a/Terrain/Terrain.vcxproj
+++ b/Terrain/Terrain.vcxproj
@@ -145,7 +145,7 @@
     <ClCompile Include="src\TextureController.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\Shaders\ComputeTest.cms" />
+    <None Include="..\Shaders\ComputeNoise.cms" />
     <None Include="..\Shaders\Norms.gs" />
     <None Include="..\Shaders\plainFrag.fs" />
     <None Include="..\Shaders\plainVert.vs" />
