--- a/Terrain/Terrain.vcxproj.filters
+++ b/Terrain/Terrain.vcxproj.filters
@@ -91,5 +91,6 @@
     <None Include="..\Shaders\Quad.vs" />
     <None Include="..\Shaders\Quad.fs" />
     <None Include="..\Shaders\ComputeNoise.cms" />
+    <None Include="..\Shaders\ComputeCDM.cms" />
   </ItemGroup>
 </Project>
